# lst

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IDEA.md  PERFORMANCE_DEFERRED.md  README.md  TODO.md  install.sh
apps/lst-gpui/: Cargo.toml  README.md
apps/lst-gpui/examples/: bench_editor_x11.rs  bench_syntax_highlight.rs
apps/lst-gpui/src/: actions.rs  bench_trace.rs  crash_log.rs  input_adapter.rs  interactions.rs  keymap.rs  launch.rs  main.rs  recent.rs  runtime.rs  shell.rs  syntax.rs  tests.rs  viewport.rs
apps/lst-gpui/src/runtime/: clipboard.rs  scratchpad.rs
apps/lst-gpui/src/syntax/: catalog.rs  highlight.rs  mod.rs
apps/lst-gpui/src/ui/: icon_button.rs  input_field.rs  mod.rs  scrollbar.rs  tab.rs  tab_bar.rs  theme.rs
apps/lst-gpui/tests/: real_x11_smoke.rs
benchmarks/: README.md  paste-corpus-20k.rs
crates/lst-core/: Cargo.toml
crates/lst-core/src/: document.rs  find.rs  lib.rs  position.rs  selection.rs  wrap.rs
crates/lst-editor/: Cargo.toml
crates/lst-editor/src/: command.rs  document.rs  editor_ops.rs  effect.rs  find.rs  language.rs  lib.rs  model_io.rs  selection.rs  snapshot.rs  tab.rs  tab_set.rs  viewport.rs  vim.rs  wrap.rs
crates/lst-editor/tests/: behavior.rs  language.rs  viewport.rs
crates/lst-editor/tests/common/: mod.rs
crates/lst-ui/: Cargo.toml
crates/lst-ui/src/: icon_button.rs  input_field.rs  tab.rs  tab_bar.rs  theme.rs
docs/: editor-behaviors-checklist.md  editor-partial-bundles.md  highlight-attribution.md  iced-text-editor-assessment.md  performance-optimization-handoff.md  performance-optimization.md  roadmap.md  testing-philosophy.md
legacy/iced-lst/: CLAUDE.md  Cargo.toml  README.md
legacy/iced-lst/docs/: iced-text-editor-assessment.md
legacy/iced-lst/src/: app.rs  clock.rs  editor_ops.rs  find.rs  lib.rs  viewport.rs
legacy/iced-lst/tests/: auto_indent.rs  clipboard_integration.rs  editing.rs  file_io.rs  find_replace.rs  goto_line.rs  input_behaviors.rs  line_ops.rs  modified_flag.rs  selection.rs  tabs.rs  vim_motions.rs
legacy/iced-lst/tests/common/: mod.rs
spikes/gpui-paste-lab/: Cargo.toml  README.md
spikes/gpui-paste-lab/src/: main.rs
src/: app.rs  clipboard.rs  dialogs.rs  editor_ops.rs  find.rs  fs.rs  highlight.rs  lib.rs  main.rs  style.rs  tab.rs  viewport.rs  vim.rs
tests/: auto_indent.rs  bracket_close.rs  editing.rs  escape_cascade.rs  find_replace.rs  goto_line.rs  line_ops.rs  modified_flag.rs  page_movement.rs  runtime_file_flows.rs  shortcut_routing.rs  startup.rs  tab_reorder.rs  tabs.rs  undo_grouping.rs  vim_editing.rs  vim_visual.rs  word_wrap.rs
tests/common/: mod.rs
