[package]
name = "lst-gpui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
internal-invariants = []

[dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["x11"] }
iced_core = "0.14.0"
lst-core = { path = "../../crates/lst-core" }
lst-ui = { path = "../../crates/lst-ui" }
ropey = "1.6.1"
rfd = "0.17"
tree-sitter-highlight = "0.26.8"
tree-sitter-rust = "0.24.2"
