[package]
name = "lst-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["x11"] }
smallvec = "1.13"
unicode-segmentation = "1.12"

[dev-dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["test-support", "x11"] }
